# lap-timer

./: .gitignore  Cargo.toml  README.md  python_gps_plotting.ipynb
.cargo/: config.toml
python_stuff/: read1.py
src/: fps_monitor.rs  main.rs  ui.rs
src/ui/: display_buffer.rs  display_buffering.rs
