[package]
name = "lap-timer"
version = "0.1.0"
authors = ["tim"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "*", features = ["hal"] }
embedded-hal = "*"
embedded-time = "*"
display-interface-spi = "*"
st7789 = "*"
embedded-graphics = "*"
drogue-mpu-6050 = "*"
serial = "*"
nmea = "*"
chrono = "*"
bno055 = "*"
crossterm = "*"